# gameboy-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
include/: bus.h  cartridge.h  common.h  cpu.h  emulator.h  instructions.h  ram.h  stack.h  window.h
include/utils/: bit_utils.h  debug.h  file_util.h
src/: bus.cpp  cartridge.cpp  cpu.cpp  emulator.cpp  instructions.cpp  ram.cpp  stack.cpp  window.cpp
src/utils/: debug.cpp  file_util.cpp
